Challenge1/Task1/terraform-files/03-kube-manifests-Ingress-SSL/02-ALB-Ingress-SSL-Redirect.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-demo
  annotations:
    
    alb.ingress.kubernetes.io/load-balancer-name: ingress-ssl-demo
    
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:805807357018:certificate/c8931e96-b977-40eb-b571-0930bc8d8e18
    
    alb.ingress.kubernetes.io/ssl-redirect: '443'      
spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                  
  defaultBackend:
    service:
      name: app1-nginx-nodeport-service
      port:
        number: 80
